[gd_scene load_steps=13 format=2]

[ext_resource path="res://UI/Dialogue/DialogueManager.gd" type="Script" id=1]
[ext_resource path="res://PixelArt/UI/Dialogue/dialogue_box.png" type="Texture" id=2]
[ext_resource path="res://Others/Fonts/joystix monospace.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Others/Fonts/AncientModernTales-a7Po.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://PixelArt/UI/Btns/yes_btn.png" type="Texture" id=5]
[ext_resource path="res://PixelArt/UI/Btns/no_btn.png" type="Texture" id=6]
[ext_resource path="res://PixelArt/UI/Dialogue/downArrow.png" type="Texture" id=7]
[ext_resource path="res://UI/Dialogue/Response.tscn" type="PackedScene" id=8]
[ext_resource path="res://Animations/UI/menu_arrow.tres" type="Animation" id=9]

[sub_resource type="DynamicFont" id=3]
size = 8
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
extra_spacing_top = 4
extra_spacing_char = 1
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[node name="DialogueManager" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.594604
margin_top = 0.594604
margin_right = -0.594604
margin_bottom = 0.594604
script = ExtResource( 1 )

[node name="DialogueBox" type="TextureRect" parent="."]
anchor_left = 0.508
anchor_top = 1.0
anchor_right = 0.508
anchor_bottom = 1.0
margin_left = -159.544
margin_top = -185.0
margin_right = 160.456
margin_bottom = -17.0
texture = ExtResource( 2 )
expand = true

[node name="DialogueText" type="RichTextLabel" parent="DialogueBox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 80.0
margin_right = -16.0
margin_bottom = -32.0
rect_clip_content = false
mouse_filter = 2
size_flags_vertical = 4
custom_colors/default_color = Color( 1, 0.901961, 0.784314, 1 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "TEST TEST TEST"
text = "TEST TEST TEST"
__meta__ = {
"_editor_description_": ""
}

[node name="Portrait" type="TextureRect" parent="."]
anchor_left = 0.596
anchor_top = 0.441
anchor_right = 0.74
anchor_bottom = 0.656
margin_left = 5.06662
margin_top = 12.2854
margin_right = -12.7253
margin_bottom = 7.48534
rect_rotation = -14.0

[node name="Name" type="Label" parent="."]
margin_left = 167.0
margin_top = 179.0
margin_right = 261.0
margin_bottom = 201.0
custom_colors/font_color = Color( 1, 0.862745, 0.662745, 1 )
custom_fonts/font = SubResource( 2 )
text = "Character"
align = 1
valign = 1

[node name="Btns" type="Control" parent="."]
anchor_left = 0.232
anchor_top = 0.631
anchor_right = 0.783
anchor_bottom = 0.941
margin_left = 0.223999
margin_top = 0.0799866
margin_right = 0.255981
margin_bottom = -0.120026

[node name="YesNo" type="Control" parent="Btns"]
anchor_left = 0.347
anchor_top = 0.717
anchor_right = 0.628
anchor_bottom = 0.96
margin_left = 0.389008
margin_top = 0.0170135
margin_right = 0.43602
margin_bottom = -0.0399857

[node name="YesBtn" type="TextureButton" parent="Btns/YesNo"]
anchor_left = 0.114
anchor_top = 0.042
anchor_right = 0.494
anchor_bottom = 0.854
margin_left = -0.0320005
margin_top = -0.00800014
margin_right = 33.528
margin_bottom = 19.504
rect_scale = Vector2( 0.5, 0.5 )
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 5 )

[node name="NoBtn" type="TextureButton" parent="Btns/YesNo"]
anchor_left = 0.614
anchor_top = 0.042
anchor_right = 1.023
anchor_bottom = 0.854
margin_left = -0.0320015
margin_top = -0.00800014
margin_right = 36.112
margin_bottom = 19.504
rect_scale = Vector2( 0.5, 0.5 )
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 6 )

[node name="Next" type="TextureButton" parent="Btns"]
anchor_left = 0.92
anchor_top = 0.737
anchor_right = 0.957
anchor_bottom = 0.863
margin_left = 0.0400085
margin_top = 0.0370255
margin_right = 7.45901
margin_bottom = 8.56303
rect_scale = Vector2( 0.7, 0.6 )

[node name="Sprite" type="Sprite" parent="Btns/Next"]
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 7 )
offset = Vector2( 24, 26 )
hframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="Btns/Next"]
autoplay = "enter"
anims/RESET = SubResource( 4 )
anims/enter = ExtResource( 9 )

[node name="ResponsesUI" type="Control" parent="."]
anchor_left = 0.283
anchor_top = 0.772
anchor_right = 0.719
anchor_bottom = 0.912
margin_left = 0.255981
margin_top = -0.0400085
margin_right = 0.607971
margin_bottom = 0.159973

[node name="3" parent="ResponsesUI" instance=ExtResource( 8 )]

[node name="2" parent="ResponsesUI" instance=ExtResource( 8 )]
margin_top = 16.0
margin_bottom = -21.0

[node name="1" parent="ResponsesUI" instance=ExtResource( 8 )]
margin_top = 32.0
margin_bottom = -5.0

[node name="TextSpeed" type="Timer" parent="."]

[connection signal="pressed" from="Btns/YesNo/YesBtn" to="." method="_on_YesBtn_pressed"]
[connection signal="pressed" from="Btns/YesNo/NoBtn" to="." method="_on_NoBtn_pressed"]
[connection signal="pressed" from="Btns/Next" to="." method="_on_Next_pressed"]
